@@ -11,6 +11,12 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-00
+2012-06-22 Andy Salnikov
+- renamed XtcDgIterator class into XtcChunkDgIter, XtcDechunk into
+  XtcStreamDgIter
+- updated comments in few places
+
 Tag: V00-03-01
 2012-06-21 Andy Salnikov
 - implementing live mode for XtcDgIterator
